# range-monitoring-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
configs/: default.yaml
range_monitor/: config.py  delivery.py  engine.py  html_report.py  ingestion.py  models.py  rules.py
sample_data/: calendar.csv  generate_data.py  online_sales.csv  products.csv  store_sales.csv
tests/: conftest.py  test_engine.py  test_rules.py
